--- a/Person_Recognition_Prediction_Result.ipynb
+++ b/Person_Recognition_Prediction_Result.ipynb
@@ -14,6 +14,8 @@
     }
    ],
    "source": [
+    "# @Author : Vasantha HR# @Auth\n",
+    "\n",
     "from sklearn.externals import joblib\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
