Person Reognition By Machine Learning and AI

--- a/Person_Recognition_Prediction_Result.ipynb
+++ b/Person_Recognition_Prediction_Result.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "# @Author : Vasantha HR# @Auth\n",
+    "# @Author : Vasantha HR\n",
     "\n",
     "from sklearn.externals import joblib\n",
     "\n",
